force-app/main/default/objects/Cont_Variable__c/Cont_Variable__c.object-meta.xml
<CustomObject>
    <label>Cont Variable</label>
    <nameField>
        <label>Cont Variable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cont Variables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>