force-app/main/default/objects/Cont_Variable__c/fields/ObjName__c.field-meta.xml
<CustomField>
    <fullName>ObjName__c</fullName>
    <label>ObjName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>