force-app/main/default/objects/Cont_Variable__c/fields/Variable_Value__c.field-meta.xml
<CustomField>
    <fullName>Variable_Value__c</fullName>
    <label>Variable Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>